--- a/views/fairytales.ejs
+++ b/views/fairytales.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fairytales</title>
-  <link href="/public/css/fairytales.css" rel="stylesheet" type="text/css">
+  <link href="/public/css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -21,19 +21,15 @@
   </ul>
 
   <h2>Create New Fairytale</h2>
-  <form action="/fairytales" id="new-form" method="POST">
-    <div>
-      <label for="title">Title:</label>
-      <input type="text" id="new-title" name="title" required>
-    </div>
-    <div>
-      <label for="description">Description:</label>
-      <input type="text" id="new-description" name="description" required>
-    </div>
-    <div>
-      <label for="rating">Rating:</label>
-      <input type="number" min="0" max="5" step="0.1" id="new-rating" name="rating" required>
-    </div>
+  <form class="form" action="/fairytales" method="POST">
+    <label for="title">Title:</label>
+    <input type="text" id="new-title" name="title" required>
+
+    <label for="description">Description:</label>
+    <input type="text" id="new-description" name="description" required>
+
+    <label for="rating">Rating:</label>
+    <input type="number" min="0" max="5" step="0.1" id="new-rating" name="rating" required>
     <button type="submit">Create</button>
   </form>
 </body>
