--- a/views/book.ejs
+++ b/views/book.ejs
@@ -18,7 +18,7 @@
 
   <p>
     <b>Author:</b>
-    <%= book.author %>
+    <%= book.author.name %>
   </p>
 
   <p>
@@ -26,21 +26,45 @@
     <%= book.pages %>
   </p>
 
-  <h2>Edit book</h2>
-  <form class="form" action="/books/<%= book.id %>?_method=PUT" method="POST" enctype="application/x-www-form-urlencoded">
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" value="<%= book.title %>" required>
 
-    <label for="author">Author:</label>
-    <input type="text" id="author" name="author" value="<%= book.author %>" required>
+  <% if (book.categories.length> 0) { %>
+    <h3>Categories:</h3>
+    <ul>
+      <% book.categories.forEach(category=> { %>
+        <li>
+          <%= category.name %>
+        </li>
+        <% }) %>
+    </ul>
+    <% } %>
 
-    <button type="submit">Update</button>
-  </form>
+      <h2>Edit book</h2>
+      <form class="form" action="/books/<%= book.id %>?_method=PUT" method="POST"
+        enctype="application/x-www-form-urlencoded">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" value="<%= book.title %>" required>
 
-  <h2>Delete book</h2>
-  <form action="/books/<%= book.id %>?_method=DELETE" method="POST">
-    <button type="submit" class="delete-button">Delete</button>
-  </form>
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" value="<%= book.author.name %>" required>
+          <h3>Categories:</h3>
+          <ul>
+            <% book.categories.forEach(category=> { %>
+              <li>
+                <input type="text" name="categories[]" value="<%= category.name %>" required>
+              </li>
+              <% }) %>
+              <li>
+                <input type="text" name="newCategories[]" placeholder="New Category">
+              </li>
+          </ul>
+
+            <button type="submit">Update</button>
+      </form>
+
+      <h2>Delete book</h2>
+      <form action="/books/<%= book.id %>?_method=DELETE" method="POST">
+        <button type="submit" class="delete-button">Delete</button>
+      </form>
 </body>
 
 </html>
